--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ body {
 .container {
     justify-content: center;
     align-items: center;
-
     padding-top: 4rem;
     color: #e8e8e8;
 }
@@ -174,7 +173,7 @@ p {
 }
 
 h2 {
-    color: #fff;
+    color: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%); 
     font-size: 45px;
     text-align: center;
     margin-bottom: 2.2rem;
@@ -287,7 +286,7 @@ footer .icons {
     grid-template-rows: auto 1fr 80px;
     max-width: 400px;
     padding: 1rem 2rem;
-    border: 1.8px solid transparent;
+    border: 1.5px solid transparent;
     border-radius: 15px;
     margin: 0 auto;
     transition: all 0.2s ease-in-out;
@@ -326,6 +325,7 @@ footer .icons {
     color: rgb(255, 83, 83);
 }
 .course-card:hover{
+    border-color: #fff;
     cursor: pointer;
 }
 .course-card:active{
@@ -358,10 +358,7 @@ form{
                          "submit";
     gap: 1.5rem;
 }
-form:hover{
-    border-color: #fff;
-    transition: all .15s ease;
-}
+
 form>*{
     display: flex;
     flex-direction: row;
@@ -535,4 +532,52 @@ input[type=number] {
         flex-direction: column;
         gap: 1rem;
     }
+}
+.carrier-area{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+}
+td, th{
+    padding: 15px;
+    text-align: center;
+}
+tr{
+    background-color: #3f3d3d;
+    filter: opacity(0.9);
+    border-radius: 25px;
+}
+tr:nth-child(even){
+    background-color: #2b2a2a;
+}
+tr:nth-child(1){
+    background-color: transparent;
+}
+.table-desc{
+    max-width: 700px;
+}
+#boring{
+    border-radius: 25px;
+    padding: 10px 20px;
+    background-color: rgb(84, 68, 40);
+    filter: opacity(0.9);
+}
+#neutral{
+    border-radius: 25px;
+    padding: 10px 20px;
+    background-color: rgb(106, 106, 106);
+    filter: opacity(0.9);
+}
+#amazing{
+    border-radius: 25px;
+    padding: 10px 20px;
+    background-color: rgb(1, 179, 22);
+    filter: opacity(0.9);
+}
+#good{
+    border-radius: 25px;
+    padding: 10px 20px;
+    background-color: rgb(110, 144, 73);
+    filter: opacity(0.9);
 }
